--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,11 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>{{ page.title }}</title>
+    <link rel="stylesheet" href="/assets/css/styles.css" />
+    <link rel="stylesheet" href="/assets/css/header.css" />
+    <link rel="stylesheet" href="/assets/css/buttons.css" />
   </head>
   <body>
-    {% include navigation.html %}
-    {{ content }}
+    {% include header.html %} 
+    {% include buttons.html %}
   </body>
 </html>
