--- a/_includes/buttons.html
+++ b/_includes/buttons.html
@@ -1,12 +1,9 @@
-{% for item in site.data.buttons %}
 <div class="buttons">
   <ul>
+    {% for item in site.data.buttons %}
     <li>
-      <label>{{ item.curriculum }}</label>
+      <a href="{{item.url}}">{{ item.name }}</a>
     </li>
-    <li>
-      <label>{{ item.projects }}</label>
-    </li>
+    {% endfor %}
   </ul>
 </div>
-{% endfor %}
