Basic black style

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8" />
     <title>{{ page.title }}</title>
     <link rel="stylesheet" href="/assets/css/styles.css" />
-    <link rel="stylesheet" href="/assets/css/header.css" />
-    <link rel="stylesheet" href="/assets/css/buttons.css" />
+    <link rel="stylesheet" href="/assets/css/home.css" />
   </head>
   <body>
     {% include header.html %} 
