--- a/_includes/buttons.html
+++ b/_includes/buttons.html
@@ -2,7 +2,9 @@
   <ul>
     {% for item in site.data.buttons %}
     <li>
-      <a href="{{item.url}}">{{ item.name }}</a>
+      <a href="{{item.url}}">
+        <label> {{ item.name }} </label>
+      </a>
     </li>
     {% endfor %}
   </ul>
