--- a/_layouts/curriculum.html
+++ b/_layouts/curriculum.html
@@ -4,8 +4,36 @@
     <meta charset="utf-8" />
     <title>{{ page.title }}</title>
     <link rel="stylesheet" href="/assets/css/styles.css" />
+    <link rel="stylesheet" href="/assets/css/curriculum.css" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
+      integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
-    <h1>Curriculum</h1>
+    {% assign item = site.data.curriculum %}
+    <h1>{{ item.name | upcase }}</h1>
+    <ul class="personal">
+      <li>
+        <i class="fas fa-map-marker-alt"></i>
+        <label class="value">{{ item.location }}</label>
+      </li>
+      <li>
+        <i class="fas fa-envelope"></i>
+        <label class="value">{{ item.email }}</label>
+      </li>
+      <li>
+        <i class="fab fa-github"></i>
+        <a class="value" href="{{ item.github_link }}">{{
+          item.github_name
+        }}</a>
+      </li>
+    </ul>
+    <h2>{{ item.career_summary | upcase }}</h2>
+    {% include career-summary.html %} 
+    <h2>{{ item.experience | upcase }}</h2>
+    {% include experience.html %}
   </body>
 </html>
