--- a/_layouts/curriculum.html
+++ b/_layouts/curriculum.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>{{ page.title }}</title>
+    <link rel="icon" type="image/x-icon" href="/assets/images/curriculum-favicon.ico">
     <link rel="stylesheet" href="/assets/css/styles.css" />
     <link rel="stylesheet" href="/assets/css/curriculum.css" />
     <link
