--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>{{ page.title }}</title>
+    <link rel="icon" type="image/x-icon" href="/assets/images/smile-favicon.ico">
     <link rel="stylesheet" href="/assets/css/styles.css" />
     <link rel="stylesheet" href="/assets/css/home.css" />
   </head>
