--- a/_includes/curriculum/personal.html
+++ b/_includes/curriculum/personal.html
@@ -1,4 +1,4 @@
-{% assign item = site.data.personal %}
+{% assign item = site.data.curriculum.personal %}
 
 <div class="personal">
   <ul class="contact">
