--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      charset="utf-8"
+      content="initial-scale=1.0"
+    />
     <title>{{ page.title }}</title>
-    <link rel="icon" type="image/x-icon" href="/assets/images/smile-favicon.ico">
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="/assets/images/smile-favicon.ico"
+    />
     <link rel="stylesheet" href="/assets/css/styles.css" />
     <link rel="stylesheet" href="/assets/css/home.css" />
   </head>
   <body>
-    {% include header.html %} 
-    {% include buttons.html %}
+    {% include header.html %} {% include buttons.html %}
   </body>
 </html>
