--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8" />
+      <meta
+      name="viewport"
+      charset="utf-8"
+      content="width=device-width, initial-scale=1.0"
+    />
     <title>{{ page.title }}</title>
-    <link rel="icon" type="image/x-icon" href="/assets/images/project-favicon.ico">
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="/assets/images/project-favicon.ico"
+    />
     <link rel="stylesheet" href="/assets/css/styles.css" />
   </head>
   <body>
