--- a/_includes/curriculum/education.html
+++ b/_includes/curriculum/education.html
@@ -1,7 +1,41 @@
 <div class="education">
-    <ul>
+    <ul class="timeline">
         {% for item in site.data.curriculum.education %}
-        <li>{{ item.name }}</li>
+        <li class="timeline-item">
+            <!-- HEADER -->
+            <div class="header">
+                <div class="title">
+                    <h3 class="main">{{ item.title }}</h3>
+                    <a class="side" href="{{ item.where_url }}">{{
+                        item.where
+                    }}</a>
+                </div>
+                <div class="time">{{ item.time }}</div>
+            </div>
+            <!-- DESRIPTION -->
+            <span class="description ">{{ item.description }}</span>
+            <!-- BLOCK -->
+            <div class="item-block">
+                <h4 class="title">{{ item.achievements.title }}</h4>
+                <span class="description ">{{
+                    item.achievements.description
+                }}</span>
+                <ul>
+                    {% for achievement in item.achievements.list %}
+                    <li>{{ achievement }}</li>
+                    {% endfor %}
+                </ul>
+            </div>
+            <!-- CARDS -->
+            <div class="cards">
+                <h4>{{ item.technologies.title }}</h4>
+                <ul>
+                    {% for technology in item.technologies.list %}
+                    <li>{{ technology }}</li>
+                    {% endfor %}
+                </ul>
+            </div>
+        </li>
         {% endfor %}
     </ul>
 </div>
