Curriculum anchor styles

--- a/_includes/curriculum/education.html
+++ b/_includes/curriculum/education.html
@@ -6,7 +6,7 @@
             <div class="header">
                 <div class="title">
                     <h3 class="main">{{ item.title }}</h3>
-                    <a class="side" href="{{ item.where_url }}">{{
+                    <a class="side" target="_blank" href="{{ item.where_url }}">{{
                         item.where
                     }}</a>
                 </div>
