--- a/assets/css/personal.css
+++ b/assets/css/personal.css
@@ -1,56 +1,53 @@
 .personal {
-  position: relative;
-  float: left;
-  width: 100%;
-  display: flex;
-  align-content: center;
-  justify-content: space-between;
+    position: relative;
+    float: left;
+    width: 100%;
+    display: flex;
+    align-content: center;
+    justify-content: space-between;
 }
 
 @media only screen and (max-width: 600px) {
-  .personal {
-    display: block;
-  }
+    .personal {
+        display: block;
+    }
 }
 
-.personal ul li {
-  position: relative;
-  float: left;
-  width: 100%;
-  padding-bottom: 5px;
-  display: flex;
+.personal > ul li {
+    position: relative;
+    float: left;
+    width: 100%;
+    padding-bottom: 5px;
+    display: flex;
 }
 
-.personal ul i {
-  position: relative;
-  float: left;
-  width: 1.2em;
-  text-align: center;
-  margin: auto;
-  margin-left: 0;
-  margin-right: 0;
+.personal > ul i {
+    position: relative;
+    float: left;
+    width: 1.2em;
+    text-align: center;
+    margin: auto;
+    margin-left: 0;
+    margin-right: 0;
 }
 .personal .value {
-  padding-left: 10px;
-  text-decoration: none;
-  color: inherit;
-  margin: auto;
-  margin-left: 0;
-  margin-right: 0;
+    padding-left: 10px;
+    text-decoration: none;
+    color: inherit;
+    margin: auto;
+    margin-left: 0;
+    margin-right: 0;
 }
-.personal .social {
-  width: 105px;
+
+/* SOCIAL */
+.personal > .social {
+    width: 105px;
 }
-.personal .social a {
-  display: flex;
-  align-content: center;
-  color: inherit;
-  text-decoration: none;
-  margin-right: auto;
+.personal > .social a {
+    display: flex;
+    align-content: center;
+    color: inherit;
+    text-decoration: none;
+    margin-right: auto;
 }
-.personal .social a:hover {
-  text-decoration: underline;
-}
-.personal .social a > * {
-  cursor: pointer;
-}
+
