--- a/assets/css/personal.css
+++ b/assets/css/personal.css
@@ -39,6 +39,12 @@
     margin-right: 0;
 }
 
+.personal > .contact a {
+    display: flex;
+    color: inherit;
+    text-decoration: none;
+}
+
 /* SOCIAL */
 .personal > .social {
     width: 105px;
@@ -50,4 +56,3 @@
     text-decoration: none;
     margin-right: auto;
 }
-
