--- a/_includes/curriculum/personal.html
+++ b/_includes/curriculum/personal.html
@@ -1,26 +1,24 @@
 {% assign item = site.data.curriculum.personal %}
 
 <div class="personal">
-    <ul class="contact">
+    <ul>
         <li>
-            <a href="{{ item.location_url }}" target="_blank">
+            <a href="{{ item.location_url }}" target="_blank" class="tooltip">
+                <span class="tooltip-text">{{ item.location }}</span>
                 <i class="fas fa-map-marker-alt"></i>
-                <label class="value">{{ item.location }}</label>
             </a>
         </li>
         <li>
-            <a href="mailto: {{ item.email }}">
+            <a href="mailto: {{ item.email }}" class="tooltip">
+                <span class="tooltip-text">Send email</span>
                 <i class="fas fa-envelope"></i>
-                <label class="value">{{ item.email }}</label>
             </a>
         </li>
-    </ul>
-    <ul class="social">
         {% for s in item.social %}
         <li>
-            <a href="{{ s.link }}" target="_blank">
+            <a href="{{ s.link }}" target="_blank" class="tooltip">
+                <span class="tooltip-text">{{ s.name }}</span>
                 <i class="{{ s.icon }}"></i>
-                <label class="value"> {{ s.name }}</label>
             </a>
         </li>
         {% endfor %}
