--- a/_layouts/curriculum.html
+++ b/_layouts/curriculum.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" href="/assets/css/career-summary.css" />
         <link rel="stylesheet" href="/assets/css/experience.css" />
         <link rel="stylesheet" href="/assets/css/education.css" />
+        <link rel="stylesheet" href="/assets/css/interests.css" />
         <link
             rel="stylesheet"
             href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
