--- a/_layouts/curriculum.html
+++ b/_layouts/curriculum.html
@@ -9,65 +9,25 @@
             href="/assets/images/curriculum-favicon.ico"
         />
         <link rel="stylesheet" href="/assets/css/styles.css" />
-        <link rel="stylesheet" href="/assets/css/curriculum.css" />
-        <link rel="stylesheet" href="/assets/css/personal.css" />
-        <link rel="stylesheet" href="/assets/css/career-summary.css" />
-        <link rel="stylesheet" href="/assets/css/experience.css" />
-        <link rel="stylesheet" href="/assets/css/education.css" />
-        <link rel="stylesheet" href="/assets/css/interests.css" />
+        <link rel="stylesheet" href="/assets/css/curriculum/curriculum.css" />
+        <link rel="stylesheet" href="/assets/css/curriculum/personal.css" />
+        <link
+            rel="stylesheet"
+            href="/assets/css/curriculum/career-summary.css"
+        />
+        <link rel="stylesheet" href="/assets/css/curriculum/experience.css" />
+        <link rel="stylesheet" href="/assets/css/curriculum/education.css" />
+        <link rel="stylesheet" href="/assets/css/curriculum/interests.css" />
         <link
             rel="stylesheet"
             href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
             integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP"
             crossorigin="anonymous"
         />
-        <script>
-            var print = 0;
-            function changeColor() {
-                let root = document.documentElement;
-
-                if (print) {
-                    document.body.style.background = 'var(--main-bg-dark)';
-                    document.body.style.color = 'var(--main-bg-light)';
-                    root.style.setProperty('--card-color', 'var(--card-light)');
-                    root.style.setProperty('--card-bg', 'var(--card-dark)');
-
-                    root.style.setProperty(
-                        '--timeline-color',
-                        'var(--main-bg-light)'
-                    );
-
-                    root.style.setProperty(
-                        '--timeline-item-border',
-                        'var(--main-bg-dark)'
-                    );
-                } else {
-                    document.body.style.background = 'var(--main-bg-light)';
-                    document.body.style.color = 'var(--main-bg-dark)';
-                    root.style.setProperty('--card-color', 'var(--card-dark)');
-                    root.style.setProperty('--card-bg', 'var(--card-light)');
-
-                    root.style.setProperty(
-                        '--timeline-color',
-                        'var(--main-bg-dark)'
-                    );
-                    root.style.setProperty(
-                        '--timeline-item-border',
-                        'var(--main-bg-light)'
-                    );
-                }
-                print = !print;
-            }
-        </script>
+        
     </head>
     <body class="curriculum">
-        <div class="links">
-            <a class="back" href="/"> <i class="fas fa-chevron-left"></i> </a>
-            <a class="print" onclick="changeColor()">
-                <i class="fas fa-print"></i>
-            </a>
-        </div>
-
+        {% include top-links.html %} 
         {% assign item = site.data.curriculum.curriculum %}
         <h1>{{ item.name | upcase }}</h1>
         <!-- PERSONAL -->
@@ -85,9 +45,9 @@
         <h2>{{ item.education | upcase }}</h2>
         {% include curriculum/education.html %}
         <!-- LANGUAGES -->
-        {% assign item = site.data.curriculum.curriculum %}
+        <!-- {% assign item = site.data.curriculum.curriculum %}
         <h2>{{ item.languages | upcase }}</h2>
-        {% include curriculum/languages.html %}
+        {% include curriculum/languages.html %} -->
         <!-- INTERESTS -->
         {% assign item = site.data.curriculum.curriculum %}
         <h2>{{ item.interests | upcase }}</h2>
